--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 <body>
 <div class="outer">
-    <input type="text" id="text" placeholder="Type...">
-    <input type="button" id="button" value="ADD" style="width: 43px"><br>
+    <div style="display: flex">
+        <input type="text" id="text" placeholder="Type...">
+        <input type="button" id="button" value="ADD" style="width: 43px margin-left: 7px">
+    </div>   
     <input type="text" id="search-input" placeholder="search...">
 
     <div class="nestDiv">
