--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="outer">
     <div style="display: flex">
         <input type="text" id="text" placeholder="Type...">
-        <input type="button" id="button" value="ADD" style="width: 43px margin-left: 7px">
+        <input type="button" id="button" value="ADD" style="width: 43px; margin-left: 7px">
     </div>   
     <input type="text" id="search-input" placeholder="search...">
 
